--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -1,16 +1,119 @@
-.slider-track{
-    animation: scroll 40s  linear infinite ; 
+.slider {
+  width: 100%;
+  height: auto;
+  padding: 1rem;
+  position: sticky;
+  border-radius: 1rem;
+  background-color: var(--color-primary);
+  overflow-x: auto;
+  box-shadow: 5px 5px 10px var(--color-tertiary);
+  /* background-color: aqua; */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
-.slider-track-reverse{
-    animation: scroll 40s linear infinite reverse;
+.slider::before,
+.slider::after {
+  content: "";
+  position: absolute;
+  /* top: 0; */
+  inset-block: 0;
+  width: 5rem;
+  z-index: 2;
 }
 
-@keyframes scroll {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(calc(-120px * 7));
-    }
+.slider::before {
+  left: 0;
+  background-image: linear-gradient(
+    to left,
+    transparent,
+    white,
+    var(--color-primary)
+  );
+}
+
+.slider::after {
+  right: 0;
+  background-image: linear-gradient(
+    to right,
+    transparent,
+    white,
+    var(--color-primary)
+  );
+}
+
+.slider-slide {
+  width: 100%;
+  display: flex;
+  padding: 1rem;
+  animation: slide 10s infinite linear;
+  position: sticky;
+
+
+  &:hover {
+    cursor: pointer;
+    animation-play-state: paused;
+  }
+}
+
+.slider-item {
+  display: flex;
+  /* width: 10rem; */
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5ewm;
+  margin-inline: 1rem;
+  padding: 2rem;
+  box-shadow: 0px 0px 5px slategray;
+  border-radius: 1rem;
+  background-color: var(--color-secundary); 
+  z-index: 10;
+  &:hover{
+    box-shadow: 2px 2px 15px #1f35f5;
+  }
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes slideY {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-50%);
+  }
+}
+
+@media screen and (width < 784px) {
+  .slider {
+    padding: 1rem;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    height: calc(5rem * 7);
+  }
+
+  .slider-slide {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 0.5rem;
+    /* animation-name: none; */
+    animation: slideY 10s infinite linear;
+    /* animation: none; */
+  }
+
+
+
 }
