--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@
   --color-tertiary: #007BFF;
   --color-black: #000000;
   --color-white: #ffffff;
+  --text-sm: .875rem;
+  --text-md: 1rem;
+  --text-lg: 1.125rem;
+  --text-xl: 1.25rem;
+  --text-2xl: 1.5rem;
+  --text-3xl: 1.75rem;
 }
 
 body {
